# gap_statistic

./: LICENSE  README.md  pyproject.toml
gap_statistic/: gap_statistic.py
tests/: test_gap_statistic.py
